# WhiteBoxAI

./: .gitignore  Home.py  README.md  dice_patch.txt  pyproject.toml  requirements.txt
logs/explanations/: sample_0.json  sample_1.json  sample_10.json  sample_11.json  sample_1111.json  sample_12.json  sample_122.json  sample_13.json  sample_14.json  sample_15.json  sample_16.json  sample_17.json  sample_18.json  sample_19.json  sample_2.json  sample_20.json  sample_21.json  sample_22.json  sample_23.json  sample_24.json  sample_25.json  sample_26.json  sample_27.json  sample_28.json  sample_29.json  sample_3.json  sample_30.json  sample_31.json  sample_32.json  sample_33.json  sample_34.json  sample_35.json  sample_36.json  sample_37.json  sample_38.json  sample_39.json  sample_4.json  sample_40.json  sample_41.json  sample_42.json  (+64 more)
logs/interactions_explorer/: binned_age_fnlwgt.json  binned_age_hours_per_week.json  binned_age_occupation.json  binned_capital_gain_age.json  binned_capital_gain_education_num.json  binned_capital_gain_relationship.json  binned_capital_loss_age.json  (+77 more)
pages/: 1_Data_Overview.py  1_Dataset_Viewer.py  2_Performance_Dashboard.py  2_Train_Test_Visualize.py  3_Interpretation.py  3_XAI_Prediction_Breakdown.py  4_Real-Time_Simulator.py  4_Simulator.py  5_Biais_Dashboard.py  5_Fairness_&_Biais_Analyisis.py  5_Fairness_&_Bias_Analyisis.py
utils/: counterfactuals.py  data_loader.py  feature_info.py  generate_all_explanations.py  generate_all_interactions.py  interpret_utils.py  llm_utils.py  model_utils.py  shap_utils.py  sys.py  system.md
